--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,14 +4,14 @@
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form>
+      <form #loginForm="ngForm" (ngSubmit)="submitLogin()">
         <mat-form-field appearance="outline">
-          <input matInput placeholder="Username" id="usernameInput" name="username" required>
+          <input matInput placeholder="Username" id="userNameInput" name="username" required [(ngModel)]="userData.userName">
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <input matInput type="password" placeholder="Password" id="passwordInput" name="password"required>
+          <input matInput type="password" placeholder="Password" id="passwordInput" name="password" required [(ngModel)]="userData.password">
         </mat-form-field>
-        <button mat-raised-button color="primary" >Login</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.form.invalid">Login</button>
       </form>
     </mat-card-content>
   </mat-card>
