--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- This is the main component of the application. -->
-<app-login></app-login>
+<app-header></app-header>
 <router-outlet></router-outlet>
 
