--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- This is the main component of the application. -->
 <app-header></app-header>
+<app-car-list></app-car-list>
 <router-outlet></router-outlet>
 
