--- a/src/app/components/client-registration/client-registration.component.css
+++ b/src/app/components/client-registration/client-registration.component.css
@@ -5,15 +5,17 @@
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #ededf1;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .client-registration-container h2 {
   text-align: center;
   margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 255, 0.3);
+  ;
 }
 
 .form-group {
@@ -30,10 +32,10 @@ input[type="password"],
 textarea,
 mat-checkbox,
 button {
-  width: 100%;
+  width: 93%;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid #6c8ca4;
   border-radius: 5px;
 }
 
@@ -42,8 +44,8 @@ input[type="checkbox"] {
 }
 
 button {
-  background-color: #007bff;
-  color: #fff;
+  background-color: #a9c0cd;
+  color: #000000;
   cursor: pointer;
 }
 
@@ -52,9 +54,13 @@ button:disabled {
   cursor: not-allowed;
 }
 
+button:hover {
+  background-color: #6c8ca4;
+}
 .text-danger {
-  color: #ff0000; 
+  color: #d81515; 
   font-size: 14px; 
   font-weight: bold; 
   margin-top: 5px; 
 }
+
