--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,9 @@
+
 <div class="loginContainer">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
+      <h2>Login</h2>
+      <img src="../../../assets/cartrackLogo.png" alt="Logo" class="logo">
     </mat-card-header>
     <mat-card-content>
       <form #loginForm="ngForm" (ngSubmit)="submitLogin()">
@@ -11,7 +13,7 @@
         <mat-form-field appearance="outline">
           <input matInput type="password" placeholder="Password" id="passwordInput" name="password" required [(ngModel)]="userData.password">
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.form.invalid">Login</button>
+        <button  class="login" type="submit" [disabled]="loginForm.form.invalid">Login</button>
       </form>
     </mat-card-content>
   </mat-card>
