--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,53 +1,57 @@
 .loginContainer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  background-color: #d7e5f0; 
+}
+
+.logo {
+  top: 20px; 
+  right: 45px; 
+  width: 30px; 
+}
+
+h2 {
+  margin-bottom: 15px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 255, 0.4);
 }
 
 mat-card {
   max-width: 400px;
-  padding: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  border: 1px solid #ccc;
 }
 
-.buttonContainer {
+mat-card-header {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-}
-
-.registerLink {
-  text-align: center;
-  margin-top: 10px;
-}
-
-
-.statusAlert1, .incorrectPasswordAlert, .statusAlert2, .nullAlert{
-position: fixed;
-  top: 100px;
-  right: 0;
-  padding: 5px;
-  background-color: black;
-  color: gold;
-  display: flex;
   align-items: center;
+}
+
+mat-card-content {
+  display: flex;
+  flex-direction: column;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+button {
+  width: 80%;
   justify-content: center;
-  display: none;
-  transition: 2s;
-  min-width: 20%;
-  height: 5%;
-  z-index: 3;
 }
 
-@media screen and (max-width: 353px){
-.statusAlert1, .incorrectPasswordAlert, .statusAlert2, .nullAlert{
-    top: 30vh;
-}
+.login:hover {
+  background-color: #6c8ca4;
 }
 
-.mat-mdc-raised-button.mat-primary {
---mdc-protected-button-container-color: black;
---mdc-protected-button-label-text-color: gold;
+.login{
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
 }
-
