--- a/src/app/components/buy/buy.component.css
+++ b/src/app/components/buy/buy.component.css
@@ -1,64 +1,32 @@
-.custom-dropdown {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-}
-
-.custom-dropdown select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
-  font-size: 14px;
-  color: #333;
-  outline: none;
-  cursor: pointer;
-}
-
-.custom-dropdown::before {
-  content: "\25BC";
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  pointer-events: none;
-}
-
-.custom-dropdown select:focus {
-  border-color: #007BFF;
-  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
-
-
-/* Estilos para el formulario */
+/* Estilos para el contenedor de compra de auto */
 .buy-container {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #f0f1f7;
+  box-shadow: 0 0 20px rgba(0, 0, 255, 0.3); 
 }
 
-/* Estilos para etiquetas */
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #333;
+h2{
+  text-align: center;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 255, 0.3);
+}
+/* Añadiendo sombra al contenedor del formulario */
+.buy-container form {
+  box-shadow: 0 0 10px rgba(0, 0, 255, 0.1); 
 }
 
-/* Estilos para campos de entrada de texto */
-.form-group input[type="text"],
-.form-group input[type="number"],
-.form-group input[type="date"],
-.form-group select {
+.buy-container mat-form-field {
   width: 100%;
-  padding: 10px;
+}
+
+.buy-container input, .buy-container select {
+  width: calc(100% - 24px); 
+  padding: 10px 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: #fff;
   font-size: 14px;
   color: #333;
   outline: none;
@@ -66,64 +34,46 @@
   transition: border-color 0.2s;
 }
 
-.form-group input[type="text"]:focus,
-.form-group input[type="number"]:focus,
-.form-group input[type="date"]:focus,
-.form-group select:focus {
-  border-color: #007BFF;
+.buy-container input:focus, .buy-container select:focus {
+  border-color: #3f8cbf;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-/* Estilos para los mensajes de error */
-.error-message {
-  color: #d9534f;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
 /* Estilos para el botón */
-button[type="submit"] {
-  background-color: #007BFF;
+.buy-container button[type="submit"] {
+  background-color: #3f8cbf;
   color: #fff;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  transition: background-color 0.2s;
+  width: 100%; /* Ajustar al ancho del contenedor */
+  margin-top: 10px; /* Espacio arriba del botón */
 }
 
-button[type="submit"]:hover {
-  background-color: #0056b3;
-}
-
-/* Estilos para el contenedor del formulario */
-.buy-container h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #333;
+.buy-container button[type="submit"]:hover {
+  background-color: #6c8ca4;
 }
 
 
-/* Estilo general para los campos de tipo date */
-input[type="date"] {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-/* Estilo para el icono del calendario (puedes utilizar una imagen de calendario) */
-input[type="date"]::before {
-  padding: 0 8px;
-  position: relative;
-  top: 3px;
-  color: #333; /* Color del icono */
+.buy-container mat-form-field textarea {
+  text-align: right;
 }
 
 
+.buy-container mat-error {
+  font-size: 12px;
+  margin-top: 5px;
+}
 
-/* Estilo cuando el campo está enfocado */
-input[type="date"]:focus {
-  border-color: #007BFF; /* Cambia el color del borde cuando el campo está enfocado */
-  outline: none; /* Quita el borde resaltado predeterminado en algunos navegadores */
+/* Estilos para los campos de fecha */
+.buy-container input[type="date"] {
+  width: calc(95% - 24px);
+}
+
+/* Estilos para el dropdown personalizado */
+.custom-dropdown select {
+  width: calc(100% - 12px);
 }
