Correct Header and add adminHome

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -23,8 +23,12 @@
 }
 
 /* Estilos para la sección derecha (menú desplegable) */
-.header-right .menu-button {
+.header-right .logout-button {
   cursor: pointer;
+}
+
+.header-right{
+  display:flex;
 }
 
 .header-right .menu {
@@ -53,4 +57,17 @@
 /* Estilos para el icono de menú (Material Icons) */
 .material-icons {
   font-size: 24px;
+}
+
+.user-info {
+  display: flex; /* Alinea los elementos horizontalmente */
+  align-items: center; /* Centra verticalmente los elementos */
+  margin-right: 20px; /* Agrega un margen a la derecha */
+}
+
+.user-info span {
+  font-weight: bold; /* Hace que el texto sea negrita */
+  margin-right: 10px; /* Agrega un margen a la derecha del texto */
+  color: white; /* Color de texto */
+  font-size: 18px; /* Tamaño de fuente */
 }
