Complet Admin Home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
       <img src="../../../assets/shop.png" alt="Registrar Compra">
   </mat-card>
 
-  <mat-card class="card" *ngIf="getRole()" (click)="navigateTo('/buy')">
+  <mat-card class="card" *ngIf="getRole()" (click)="navigateTo('/admin')">
       <mat-card-title>Opciones de Administrador</mat-card-title>
       <img src="../../../assets/report.png" alt="Mis Reportes">
   </mat-card>
