--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -7,35 +7,41 @@
       <form #registrationForm="ngForm" (ngSubmit)="submitLogin()">
         <mat-form-field appareance="outline">
           <label for ="userNameInput">Nombre de usuario</label>
-          <input matInput placeholder="Nombre de usuario" id="userNameInput" name="username" required [(ngModel)]="userData.userName">
+          <input  id="userNameInput" name="username" required [(ngModel)]="userData.userName">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput type="password" placeholder="Contraseña" id="passwordInput" name="password" required [(ngModel)]="userData.password">
+          <label for ="passwordInput">Contraseña</label>
+          <input matInput type="password"  id="passwordInput" name="password" required [(ngModel)]="userData.password">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Número de identificación" id="identificationNumberInput" name="identificationNumber" required [(ngModel)]="userData.identificationNumber">
+          <label for ="identificationNumberInput">Número de identificación</label>
+          <input  id="identificationNumberInput" name="identificationNumber" required [(ngModel)]="userData.identificationNumber">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Primer nombre" id="firstNameInput" name="firstName" required [(ngModel)]="userData.firstName">
+          <label for ="firstNameInput">Primer nombre</label>
+          <input  id="firstNameInput" name="firstName" required [(ngModel)]="userData.firstName">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Segundo nombre" id="secondNameInput" name="secondName" [(ngModel)]="userData.secondName">
+          <label for ="secondNameInput">Segundo nombre</label>
+          <input  id="secondNameInput" name="secondName" [(ngModel)]="userData.secondName">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Apellido" id="lastNameInput" name="lastName" required [(ngModel)]="userData.lastName">
+          <label for ="lastNameInput">Apellido</label>
+          <input id="lastNameInput" name="lastName" required [(ngModel)]="userData.lastName">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Dirección" id="address" name="address" required [(ngModel)]="userData.address">
+          <label for ="address">Dirección</label>
+          <input  id="address" name="address" required [(ngModel)]="userData.address">
         </mat-form-field>
         <mat-form-field appareance="outline">
-          <input matInput placeholder="Teléfono" id="phone" name="phone" required [(ngModel)]="userData.phone">
+          <label for ="phone">Teléfono</label>
+          <input  id="phone" name="phone" required [(ngModel)]="userData.phone">
         </mat-form-field>
         <mat-form-field>
           <label for="role">Selecciona una opción:</label>
           <select name="role" id="role" placeholder="role" required [(ngModel)]="userData.role">
             <option value="admin">Administrador</option>
             <option value="seller">Vendedor</option>
-            <option value="customer">Cliente</option>
           </select>
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit" [disabled]="registrationForm.form.invalid">Registrar</button>
