--- a/src/app/components/user-registration/user-registration.component.css
+++ b/src/app/components/user-registration/user-registration.component.css
@@ -1,19 +1,69 @@
-/* Agrega estilos personalizados para el formulario */
 .formContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  margin: 0 auto;
+  width: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 255, 0.2);
+  padding: 15px;
+  background-color: #e6ebf0; /* Añadido fondo blanco */
+  border-radius: 5px;
+}
+
+
+mat-card-title {
+  text-align: center; /* Centrar el título del mat-card */
+  box-shadow: #0056b3;
 }
 
 mat-card {
-  max-width: 400px;
   width: 100%;
 }
 
-/* Estilo del botón deshabilitado */
-.mat-raised-button[disabled] {
-  background-color: #ccc; /* Cambia el color de fondo cuando está deshabilitado */
-  cursor: not-allowed; /* Cambia el cursor del mouse */
-  pointer-events: none; /* Desactiva la interacción del usuario */
+mat-form-field {
+  width: 100%;
+  margin-bottom: 16px;
+  box-shadow: 0 2px 4px rgba(75, 75, 194, 0.1); /* Sombra azul sutíl */
+}
+
+mat-form-field label {
+  font-size: 14px;
+}
+
+mat-form-field input, mat-form-field select {
+  font-size: 14px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  display: flex;
+}
+
+mat-raised-button {
+  background-color: #0056b3;
+  color: white;
+  font-size: 14px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  width: 100%; 
+}
+
+mat-raised-button:hover {
+  background-color: #8db3db;
+}
+.mat-card-content {
+  text-align: center; /* Centrar el contenido del mat-card */
+}
+
+button[type="submit"] {
+  margin: 0 auto; /* Centrar el botón horizontalmente */
+}
+
+button[type="submit"]:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  justify-content: center;
+}
+
+mat-raised-button{
+  transition: background-color 0.2s ease-in-out;
+  width: 100%;
 }
