Change admin menu

--- a/src/app/components/admin-home/admin-home.component.html
+++ b/src/app/components/admin-home/admin-home.component.html
@@ -1,22 +1,22 @@
 <div class="card-container">
-  <mat-card class="card" (click)="navigateTo('/cars')" >
+  <mat-card class="card" (click)="navigateTo('/user/registration')" >
       <mat-card-title>Crear Nuevo Usuario</mat-card-title>
-      <img src="../../../assets/cartrackLogo.png" alt="Crear Usuario">
+      <img src="../../../assets/createuser.png" alt="Crear Usuario">
   </mat-card>
 
-  <mat-card class="card" (click)="navigateTo('/client/registration')">
+  <mat-card class="card" (click)="navigateTo('/list')">
       <mat-card-title>Actualizar Autos</mat-card-title>
-      <img src="../../../assets/user.png" alt="Actualizar Autos">
+      <img src="../../../assets/updatecar.png" alt="Actualizar Autos">
   </mat-card>
 
-  <mat-card class="card" (click)="navigateTo('/buy')">
+  <mat-card class="card" (click)="navigateTo('/clients')">
       <mat-card-title>Listar Clientes</mat-card-title>
-      <img src="../../../assets/shop.png" alt="Listar Clientes">
+      <img src="../../../assets/clientes.png" alt="Listar Clientes">
   </mat-card>
 
   <mat-card class="card"  (click)="navigateTo('/buy')">
       <mat-card-title>Reportes Generales</mat-card-title>
-      <img src="../../../assets/report.png" alt="Reportes Generales">
+      <img src="../../../assets/reportes.png" alt="Reportes Generales">
   </mat-card>
 
 </div>
