--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header-left">
+    <div class="header-left" (click)="navigateTo('/home')">
         <img src="../../../assets/cartrackLogo.png" alt="Logo Circular" (click)="navigateTo('/home')">
     </div>
     <div class="header-center">
