--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -44,7 +44,7 @@
             <option value="seller">Vendedor</option>
           </select>
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" [disabled]="registrationForm.form.invalid">Registrar</button>
+        <button  type="submit" [disabled]="registrationForm.form.invalid" class="boton">Registrar</button>
       </form>
     </mat-card-content>
   </mat-card>
