--- a/src/app/components/admin-home/admin-home.component.html
+++ b/src/app/components/admin-home/admin-home.component.html
@@ -14,7 +14,7 @@
       <img src="../../../assets/clientes.png" alt="Listar Clientes">
   </mat-card>
 
-  <mat-card class="card"  (click)="navigateTo('/buy')">
+  <mat-card class="card"  (click)="navigateTo('/general/report')">
       <mat-card-title>Reportes Generales</mat-card-title>
       <img src="../../../assets/reportes.png" alt="Reportes Generales">
   </mat-card>
