--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
       <img src="../../../assets/report.png" alt="Mis Reportes">
   </mat-card>
 
-    <mat-card class="card" *ngIf="!getRole()" (click)="navigateTo('/cars')">
+    <mat-card class="card" *ngIf="!getRole()" (click)="navigateTo('/personal/report')">
         <mat-card-title>Mis Reportes</mat-card-title>
         <img src="../../../assets/report.png" alt="Reportes">
     </mat-card>
